Fixed more spacing issues related to headers in the user dashboard

--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -12,6 +12,7 @@
     [aria-labelledby="lender-heading"],
     [aria-labelledby="borrower-heading"],
     [aria-labelledby="history-heading"],
+    [aria-labelledby="loans-heading"],
     [aria-labelledby="profile-heading"],
     #loan-status,
     #list-tool,
@@ -38,13 +39,14 @@
 
     /* ── Page header ── */
 
-    --_back-nav-h: calc(0.938rem * 1.5 + 0.375rem + 1.5rem);
-    --_header-min-h: 13rem;
+    &>nav[aria-label="Back"][data-hidden] {
+      visibility: hidden;
+    }
 
     &>header {
       border-bottom: 1px solid var(--mountain-fog);
       margin-bottom: 2rem;
-      min-height: var(--_header-min-h);
+      min-height: 13rem;
       padding-bottom: 2rem;
       text-align: center;
 
@@ -2616,6 +2618,7 @@
       [aria-labelledby="borrower-heading"],
       [aria-labelledby="history-heading"],
       [aria-labelledby="profile-heading"],
+      #my-loans,
       #loan-status,
       #list-tool,
       #edit-tool,
@@ -2722,6 +2725,7 @@
       [aria-labelledby="borrower-heading"],
       [aria-labelledby="history-heading"],
       [aria-labelledby="profile-heading"],
+      #my-loans,
       #loan-status,
       #list-tool,
       #edit-tool,
@@ -2736,6 +2740,7 @@
       [aria-labelledby="borrower-heading"],
       [aria-labelledby="history-heading"],
       [aria-labelledby="profile-heading"],
+      #my-loans,
       #loan-status,
       #list-tool,
       #edit-tool,
@@ -2750,6 +2755,7 @@
       [aria-labelledby="borrower-heading"],
       [aria-labelledby="history-heading"],
       [aria-labelledby="profile-heading"],
+      #my-loans,
       #loan-status,
       #list-tool,
       #edit-tool,
@@ -2757,7 +2763,6 @@
       #bookmarks-page,
       #events-page)>header {
       min-height: unset;
-      padding-top: 0;
     }
 
     section[aria-labelledby="summary-heading"]>ul,
@@ -2976,6 +2981,7 @@
       [aria-labelledby="borrower-heading"],
       [aria-labelledby="history-heading"],
       [aria-labelledby="profile-heading"],
+      #my-loans,
       #loan-status,
       #list-tool,
       #edit-tool,
@@ -2990,6 +2996,7 @@
       [aria-labelledby="borrower-heading"],
       [aria-labelledby="history-heading"],
       [aria-labelledby="profile-heading"],
+      #my-loans,
       #loan-status,
       #list-tool,
       #edit-tool,
